--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Shalom Mathew</title>
   </head>
   <body>
-    <!-- <h1>List of <em>food</em> I like</h1>
+    <h1>List of <em>food</em> I like</h1>
     <ol>
       <li>eggs</li>
       <li>meat</li>
@@ -99,7 +99,7 @@
         <td>Row 2 Column 2</td>
         <td>Row 2 Column 3</td>
       </tr>
-    </table> -->
+    </table>
 
     <img
       src="https://thumbs.dreamstime.com/b/six-action-cute-bulbul-brids-rim-trays-water-six-action-cute-bulbul-brids-rim-brown-trays-white-171626695.jpg"
