--- a/index.html
+++ b/index.html
@@ -5,107 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shalom Mathew</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>List of <em>food</em> I like</h1>
+    <nav>
+      <ul>
+        <li>About me</li>
+        <li>Contact me</li>
+      </ul>
+
+      <input type="text" placeholder="search" />
+      <input type="submit" />
+    </nav>
+
+    <h1>introduction</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+      pariatur, voluptate temporibus placeat deleniti maxime sequi non officia
+      earum qui. Beatae, omnis nam numquam quis exercitationem vitae neque!
+      Maxime, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Accusantium pariatur, voluptate temporibus placeat deleniti maxime sequi
+      non officia earum qui. Beatae, omnis nam numquam quis exercitationem vitae
+      neque! Maxime, tenetur. Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Accusantium pariatur, voluptate temporibus placeat
+      deleniti maxime sequi non officia earum qui. Beatae, omnis nam numquam
+      quis exercitationem vitae neque! Maxime, tenetur. Lorem ipsum dolor sit
+      amet, consectetur adipisicing elit. Accusantium pariatur, voluptate
+      temporibus placeat deleniti maxime sequi non officia earum qui. Beatae,
+      omnis nam numquam quis exercitationem vitae neque! Maxime, tenetur. Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Accusantium pariatur,
+      voluptate temporibus placeat deleniti maxime sequi non officia earum qui.
+      Beatae, omnis nam numquam quis exercitationem vitae neque! Maxime,
+      tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Accusantium pariatur, voluptate temporibus placeat deleniti maxime sequi
+      non officia earum qui. Beatae, omnis nam numquam quis exercitationem vitae
+      neque! Maxime, tenetur. Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Accusantium pariatur, voluptate temporibus placeat
+      deleniti maxime sequi non officia earum qui. Beatae, omnis nam numquam
+      quis exercitationem vitae neque! Maxime, tenetur. Lorem ipsum dolor sit
+      amet, consectetur adipisicing elit. Accusantium pariatur, voluptate
+      temporibus placeat deleniti maxime sequi non officia earum qui. Beatae,
+      omnis nam numquam quis exercitationem vitae neque! Maxime, tenetur.
+    </p>
+
+    <h1>hobbies</h1>
     <ol>
-      <li>eggs</li>
-      <li>meat</li>
-      <li>indomie</li>
-      <li>rice</li>
-      <li>bean..etc</li>
-    </ol> -->
+      <li>About me</li>
+      <li>Contact me</li>
+    </ol>
 
-    <!-- <a href="./blog.html">goto blog page</a> -->
-
-    <!-- <form action="">
-      <label for="">your username</label>
-      <input type="text" placeholder="your name" />
-      <br />
-      <label for="">your email</label>
-      <input type="email" value="email" />
-      <br />
-      <label for="">your password</label>
-      <input type="password" />
-      <br />
-      <label for="">your number</label>
-
-      <input type="number" value="number" />
-      <br />
-      <input type="hidden" />
-
-      <br />
-      <input type="submit" value="click me" />
-      <br />
-      <input type="file" />
-      <br />
-      <label for="">red</label>
-      <input type="radio" value="red" />
-      <br />
-      <label for="">green</label>
-
-      <input type="radio" value="green" />
-      <br />
-      <label for="">pink</label>
-      <input type="radio" value="pink" />
-
-      <br />
-      <label for="">red</label>
-      <input type="checkbox" value="red" />
-      <br />
-      <label for="">green</label>
-
-      <input type="checkbox" value="green" />
-      <br />
-      <label for="">pink</label>
-      <input type="checkbox" value="pink" />
-      <br />
-      <input type="time" />
-      <input type="date" />
-      <input type="month" />
-      <input type="week" />
-      <input type="datetime-local" />
-      <br />
-      <input type="color" />
-
-      <input type="range" name="age" min="10" max="20" />
-
-      <br />
-
-      <textarea rows="5" cxols="30"></textarea>
-      <br />
-      <select name="color">
-        <option value="red">Red</option>
-        <option value="yellow">Yellow</option>
-        <option value="red">red</option>
-        <option value="pink">pink</option>
-        <option value="purple">purple</option>
-      </select>
-    </form>
-
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Track</th>
-        <th>fee</th>
-      </tr>
-      <tr>
-        <td>Row 1 Column 1</td>
-        <td>Row 1 Column 2</td>
-        <td>Row 1 Column 3</td>
-      </tr>
-      <tr>
-        <td>Row 2 Column 1</td>
-        <td>Row 2 Column 2</td>
-        <td>Row 2 Column 3</td>
-      </tr>
-    </table>
-
-    <img
-      src="https://thumbs.dreamstime.com/b/six-action-cute-bulbul-brids-rim-trays-water-six-action-cute-bulbul-brids-rim-brown-trays-white-171626695.jpg"
-      alt="this is a bird"
-    />
-
-    <img src="./mg.png" alt="JDUFUD">
+    <footer><p>web development</p></footer>
   </body>
 </html>
